# ciya-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  fly.toml  rustfmt.toml
.github/workflows/: analysis.yml  deploy.yml  test.yml
src/: ciyafier.rs  convert.rs  errors.rs  lib.rs  main.rs  projector.rs  types.rs
src/bot/: commands.rs  main.rs  resources.rs
src/bot/listener/: mod.rs
src/cli/: main.rs  resources.rs
src/detectors/: mod.rs  weeb.rs
src/lib/: ciyafier.rs  convert.rs  errors.rs  lib.rs  projector.rs  types.rs
src/lib/detectors/: mod.rs  weeb.rs
tests/: smoke.rs
