[package]
name = "ciya-rs"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

[features]
webhook = ["axum", "url", "serde_json", "tokio-stream"]

[lib]
name = "ciya_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "ciya_cli"
path = "src/cli/main.rs"

[[bin]]
name = "ciya_bot"
path = "src/bot/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.2", optional = true }
clap = "2.33"
dirs = "4.0"
image = "0.23"
imageproc = "0.22"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
ndarray = { version = "0.15", features = ["rayon"] }
nshare = { version = "0.6", features = ["ndarray", "image"] }
num = "0.4"
onnxruntime = "0.0.14"
opencv = "0.55"
pretty_env_logger = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = { version = "1.0", optional = true }
shellwords = "1.1"
structopt = "0.3"
teloxide = { version = "0.5.2", features = ["auto-send", "macros"] }
thiserror = "1.0"
tokio = { version = "1.10", features = ["rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1", optional = true}
url = { version = "2.2", optional = true }
webp = "0.2"

[dev-dependencies]
tempfile = "3.2"
