[package]
name = "ciya-rs"
version = "0.1.0"
authors = ["PhotonQuantum <self@lightquantum.me>"]
edition = "2018"

[lib]
name = "ciya_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "ciya_cli"
path = "src/cli/main.rs"

[[bin]]
name = "ciya_bot"
path = "src/bot/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "4.0"
tap = "1.0"
image = "0.24"
imageproc = "0.23"
itertools = "0.10"
lazy_static = "1.4"
log = "0.4"
mime = "0.3"
ndarray = { version = "0.15", features = ["rayon"] }
nshare = { version = "0.9", features = ["ndarray", "image"] }
num = "0.4"
mcai-onnxruntime = "0.0.15"
opencv = { version = "0.71", features = ["objdetect", "imgproc"], default-features = false }
pretty_env_logger = "0.4"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls"] }
shellwords = "1.1"
teloxide = { version = "0.11", default-features = false, features = ["ctrlc_handler", "rustls", "auto-send", "macros"] }
thiserror = "1.0"
tokio = { version = "1.15", features = ["rt-multi-thread", "macros"] }
webp = "0.2"

[dev-dependencies]
tempfile = "3.3"
